# libdvdnav

./: .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  configure.ac  meson.build
doc/: doxy.conf  meson.build
src/: dvdnav_internal.h  searching.c
src/dvdnav/: dvdnav.h
src/vm/: play.c
